:bug: [open-formulieren/open-forms#3178] Fix alignment of language selection
The removal of the layout row broke the CSS.

--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -22,6 +22,10 @@
     padding-inline-start: var(--of-form-mobile-padding-inline-start, 15px);
   }
 
+  @include bem.element('language-switcher') {
+    display: flex;
+  }
+
   @include bem.element('debug') {
     margin-block-start: 2em;
   }
